| Bug #951 | ANY subselect and collation | ||
|---|---|---|---|
| Submitted: | 30 Jul 2003 2:49 | Modified: | 26 Aug 2003 12:18 |
| Reporter: | Alexander Barkov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | 4.1 latest | OS: | FreeBSD (FreeBSD) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[10 Aug 2003 0:02]
Oleksandr Byelkin
waiting Item::collation() method as it was discussed with Shurik
[11 Aug 2003 10:51]
Oleksandr Byelkin
ChangeSet 1.1611 03/08/11 20:48:51 bell@sanja.is.com.ua +4 -0 fixed collation of Item_cache family (BUG#951)
[26 Aug 2003 12:18]
Oleksandr Byelkin
pushed

Description: CREATE TABLE t1 (s1 CHAR(5) COLLATE latin1_german1_ci, s2 CHAR(5) COLLATE latin1_swedish_ci); INSERT INTO t1 VALUES ('z','Ü'); select * from t1 where s1 > (select max(s2) from t1); select * from t1 where s1 > any (select max(s2) from t1); Both queries should produce an error message, as far as values are not comparable. The second query does not produce an error though. How to repeat: Run the above sequence.