fixed collation of Item_cache family (BUG#951)